--- a/Backend/server.env
+++ b/Backend/server.env
@@ -1,6 +1,6 @@
 DB_USER=postgres
-DB_HOST=localhost
+DB_HOST=postgres121
 DB_NAME=offboarding_db
-DB_PASSWORD=root
+DB_PASSWORD=admin123
 DB_PORT=5432
-PORT=3000
+PORT=5040
