--- a/Backend/server.env
+++ b/Backend/server.env
@@ -1,5 +1,5 @@
 DB_USER=postgres
-DB_HOST=postgres121
+DB_HOST=host:postgres-offboarding
 DB_NAME=offboarding_db
 DB_PASSWORD=admin123
 DB_PORT=5432
